--- a/stable_reg_new.ipynb
+++ b/stable_reg_new.ipynb
@@ -518,7 +518,7 @@
     "function repeat_stable_reg(X, y, train_fraction = 0.7, num_repeats = 100, optimised_method = true)\n",
     "    test_mse_scores = []\n",
     "\n",
-    "    for random_seed in 1:num_repeats\n",
+    "    for random_seed in 1:num_repeatstrain_frac\n",
     "        train_X, train_y, test_X, test_y = prepare_data(X, y, random_seed, 0.9);\n",
     "\n",
     "        if random_seed % 10 == 0\n",
