--- a/src/combined_methods.ipynb
+++ b/src/combined_methods.ipynb
@@ -86,6 +86,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "normalize_data (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function generate_covariate_shift(X_test)\n",
+    "    #set a seed for distribution\n",
+    "    Random.seed!(123)\n",
+    "\n",
+    "    col_means = mean(Matrix(X_test), dims=1)\n",
+    "    std_dev = 0.1\n",
+    "\n",
+    "    random_values = zeros(size(X_test))\n",
+    "    for col_index in 1:size(X_test, 2)\n",
+    "        col_mean = col_means[col_index]\n",
+    "        col_shift = rand(Normal(col_mean * 0.5 , std_dev), (size(X_test, 1), 1))\n",
+    "        random_values[:, col_index] = col_shift\n",
+    "    end\n",
+    "\n",
+    "    X_test_shift = Matrix(X_test) .+ random_values;\n",
+    "    df_X_test_shift = DataFrame(X_test_shift,Symbol.(names(X_test)))\n",
+    "    return df_X_test_shift\n",
+    "end\n",
+    "\n",
+    "function normalize_data(X_train, X_test)\n",
+    "    # Calculate mean and standard deviation from training data\n",
+    "    mean_vals = mean(X_train, dims=1)\n",
+    "    std_vals = std(X_train, dims=1)\n",
+    "\n",
+    "    # Normalize training data\n",
+    "    X_train_norm = (X_train .-mean_vals) ./ std_vals;\n",
+    "    X_test_norm = (X_test .-mean_vals) ./ std_vals;\n",
+    "\n",
+    "    return X_train_norm, X_test_norm\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -140,7 +189,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LassoRegression (generic function with 2 methods)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function LassoRegression(X, y, lambda, weight = \"nothing\")\n",
+    "    # add column of ones\n",
+    "    X = hcat(ones(Int, size(X, 1)), X)\n",
+    "    n, p = size(X)\n",
+    "\n",
+    "    model = Model(Gurobi.Optimizer)\n",
+    "    set_optimizer_attribute(model, \"OutputFlag\", 0)\n",
+    "\n",
+    "    @variable(model, u[1:n])\n",
+    "    @variable(model, beta[1:p])\n",
+    "    @variable(model, w[1:p])\n",
+    "\n",
+    "    @objective(model, Min, sum(u) + lambda * sum(w))\n",
+    "\n",
+    "    for i in 1:p\n",
+    "        @constraint(model, w[i] >= beta[i])\n",
+    "        @constraint(model, w[i] >= -beta[i])\n",
+    "    end\n",
+    "\n",
+    "    if weight !== \"nothing\"\n",
+    "        for i in 1:n\n",
+    "            @constraint(model, u[i] >= weight[i] * (y[i] - sum(X[i, :] .* beta)))\n",
+    "            @constraint(model, u[i] >= - weight[i] * (y[i] - sum(X[i, :] .* beta)))\n",
+    "        end\n",
+    "    else\n",
+    "        for i in 1:n\n",
+    "            @constraint(model, u[i] >= (y[i] - sum(X[i, :] .* beta)))\n",
+    "            @constraint(model, u[i] >=  - (y[i] - sum(X[i, :] .* beta)))\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    optimize!(model)\n",
+    "\n",
+    "    return value.(beta)\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +252,7 @@
        "optimized_split (generic function with 2 methods)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +308,7 @@
        "split_train_val (generic function with 2 methods)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +354,7 @@
        "get_optimized_split_test_score (generic function with 2 methods)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,16 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "get_random_split_test_score (generic function with 2 methods)"
+       "get_random_split_test_score (generic function with 3 methods)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +431,7 @@
     "\n",
     "    for lambda in lambdas\n",
     "\n",
-    "        betas = LasssoRegression(X_train, y_train, lambda, weights)\n",
+    "        betas = LassoRegression(X_train, y_train, lambda, weights)\n",
     "\n",
     "        y_pred_val = X_val_with_intercept * betas\n",
     "        val_mse_i = mse(y_val, y_pred_val)\n",
@@ -357,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +469,7 @@
        "prepare_data (generic function with 1 method)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +495,7 @@
        "repeat_stable_reg_with_weights (generic function with 4 methods)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,12 +538,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "random_seed = 123\n",
-    "num_runs = 10 \n",
+    "num_runs = 1\n",
     "train_fraction = 0.7 \n",
     "lambdas = [0.00001, 0.0001, 0.001, 0.01, 0.1];\n",
     "\n",
@@ -450,104 +553,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "10\n",
       "Set parameter Username\n",
       "Academic license - for non-commercial use only - expires 2024-09-11\n",
       "Set parameter Username\n",
@@ -567,104 +579,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Vector{Any}:\n",
+       " 111.31613073748223"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_mse_scores_opt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-11\n",
-      "10\n",
       "Set parameter Username\n",
       "Academic license - for non-commercial use only - expires 2024-09-11\n",
       "Set parameter Username\n",
@@ -684,7 +626,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Vector{Any}:\n",
+       " 129.61338635203984"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_mse_scores_rand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
