--- a/src/sandbox/stableregression.ipynb
+++ b/src/sandbox/stableregression.ipynb
@@ -13,7 +13,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.5 ('cs109a')",
    "language": "python",
    "name": "python3"
   },
@@ -27,7 +27,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.11.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "683a8f5228cdb2dfe20440e7c79750b7ef6077ddd22e2c437eb1bcaa2db9b8fb"
+   }
   }
  },
  "nbformat": 4,
